Add player names, and hand status, to table list

--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -6,23 +6,29 @@
             {# yep, it's a table of tables #}
             <th>
                 <tr>
-                    <td>ID</td>
+                    <td>Status</td>
                     <td>Board</td>
                     <td>players</td>
                     <td>Auction</td>
-                    <td>Play</td>
+                    <td>Trick Counts</td>
                 </tr>
             </th>
             {% for table in page_obj %}
                 <tr>
                     <td>
-                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.pk }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">
+                            {% if table.hand_is_complete %}
+                                ✔
+                            {% else %}
+                                …
+                            {% endif %}
+                        </a>
                     </td>
                     <td>
                         <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.current_hand.board }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.playaz }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.player_names }}</a>
                     </td>
                     <td>
                         <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.current_auction_status }}</a>
