--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -27,29 +27,31 @@
             {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
         </div>
         <div class="row">
-            <div class="col" id="hello-user">
-                {% if user.is_authenticated %}
-                    Hello,
-                    {% if user.player %}
-                        {{ user.player.as_link }}.
-                    {% else %}
-                        {{ user }}.
-                    {% endif %}
-                </div>
-                <div class="col">
-                    {# TODO -- reload the whole page, or somehow update the "Hello" message, which includes whether we're a bot or not #}
-                    {% if user.player %}
-                        <div class="form-check form-switch">
-                            <input class="form-check-input"
-                                   type="checkbox"
-                                   role="switch"
-                                   id="bot-plays-for-me-switch"
-                                   hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}"
-                                   hx-target="#hello-user"
-                                   {% if user.player.allow_bot_to_play_for_me %}checked{% endif %}>
-                            <label class="form-check-label" for="bot-plays-for-me-switch">Let the bot play for me</label>
+            <div class="col">
+                <div id="hello-user">
+                    {% if user.is_authenticated %}
+                        Hello,
+                        {% if user.player %}
+                            {{ user.player.as_link }}.
+                        {% else %}
+                            {{ user }}.
+                        {% endif %}
+                    </div>
+                    <div>
+                        {# TODO -- reload the whole page, or somehow update the "Hello" message, which includes whether we're a bot or not #}
+                        {% if user.player %}
+                            <div class="form-check form-switch">
+                                <input class="form-check-input"
+                                       type="checkbox"
+                                       role="switch"
+                                       id="bot-plays-for-me-switch"
+                                       hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}"
+                                       hx-target="#hello-user"
+                                       {% if user.player.allow_bot_to_play_for_me %}checked{% endif %} />
+                                <label class="form-check-label" for="bot-plays-for-me-switch">Let the bot play for me</label>
+                            {% endif %}
                         </div>
-                    {% endif %}
+                    </div>
                 </div>
             </div>
             <div class="row">
