--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -10,10 +10,7 @@
                 Bridge
             {% endblock title %}
         </title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-              crossorigin="anonymous">
+        <link href="{% static "app/bootstrap-5.3.3-dist/css/bootstrap.min.css" %}" rel="stylesheet">
         <link href="{% static "app/datatables.css" %}" rel="stylesheet">
         <link href="{% static "app/bridge.css" %}" rel="stylesheet">
         <link rel="icon" type="image/png" href="{% static "app/spadesuit.png" %}" />
@@ -80,9 +77,7 @@
             {% block content %}
             {% endblock content %}
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
+        <script src="{% static 'app/bootstrap-5.3.3-dist/js/bootstrap.bundle.js' %}"></script>
         <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
         <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
         <script src="{% static 'app/datatables.js' %}"></script>
