Fix all the broken tests!  That wasn't too hard.

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -41,7 +41,7 @@ play_event_source.addEventListener('message', function (e) {
 
         var openingLeader = d["contract"]["opening_leader"];
 
-        if (openingLeader == {{ user.player.seat.direction }}) {
+        if (openingLeader == {{ user.player.current_seat.direction }}) {
             // Ideally we'd just reload the one hand that changed, not all four; but oh well
             htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'});
         }
