--- a/project/app/templates/table_archive.html
+++ b/project/app/templates/table_archive.html
@@ -2,7 +2,10 @@
 {% block content %}
     <div>
         <h1>Review of {{ table }}</h1>
-        I suppose if we were to play a new board, we'd play {{ table.find_unplayed_board }} or find a new board if that was None.
+        <form method="post" action="{% url 'app:new-board-plz' table.pk %}">
+            {% csrf_token %}
+            <button class="btn btn-primary" type="submit">NEW BOARD PLZ</button>
+        </form>
         <h2>{{ table.current_hand.board }}</h2>
         <h2>{{ table.current_auction_status }}</h2>
         <h2>{{ score }}</h2>
