--- a/project/app/templates/table_archive.html
+++ b/project/app/templates/table_archive.html
@@ -2,10 +2,10 @@
 {% block content %}
     <div>
         <h1>Review of {{ table }}</h1>
-        <form method="post" action="{% url 'app:new-board-plz' table.pk %}">
-            {% csrf_token %}
-            <button class="btn btn-primary" type="submit">NEW BOARD PLZ</button>
-        </form>
+        <button class="btn btn-primary"
+                hx-post="{% url 'app:new-board-plz' table.pk %}"
+                hx-swap="none"
+                type="submit">NEW BOARD PLZ</button>
         <h2>{{ table.current_hand.board }}</h2>
         <h2>{{ table.current_auction_status }}</h2>
         <h2>{{ score }}</h2>
@@ -29,3 +29,18 @@
         {% endfor %}
     </div>
 {% endblock content %}
+{% block scripts %}
+    <script>
+var table_event_source = new ReconnectingEventSource('/events/table/{{ table.pk }}');
+
+table_event_source.addEventListener('message', function (e) {
+    var d = JSON.parse(e.data) ;
+    if ("new-board" in d) {
+        console.log("Table event listener saw " + e.data);
+        table_event_source.close();
+        window.location = "{% url 'app:table-detail' table.pk %}";
+    }
+}, false);
+
+    </script>
+{% endblock scripts %}
