Fix tons of broken tests and failing type checks
When did I last run unit tests??
And did mypy suddenly get stricter?

Also: one little new test

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -37,7 +37,7 @@ play_event_source.addEventListener('message', function (e) {
 
         var openingLeader = d["contract"]["opening_leader"];
 
-        if (openingLeader == {{ user.player.current_seat.direction }}) {
+        if (openingLeader == {{ user.player.most_recent_seat.direction }}) {
             // Ideally we'd just reload the one hand that changed, not all four; but oh well
             htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'});
         }
