--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -16,7 +16,35 @@
             <div id="hand-summary">{{ table.current_hand.status }}</div>
         </h1>
     </div>
-    <div class="col">{% include "four-hands-3x3-partial.html#four-hands-3x3-partial" %}</div>
+    <div class="col">
+        {# North at the top as per the Bridge Writing Style Guide #}
+        <div id="four-hands"
+             style="border: 1px solid;
+                    height: 50%;
+                    font-family: monospace"
+             data-table="{{ table.pk }}"
+             data-hand-status="{% if table.hand_is_complete is True %}It's all over now, Baby Blue{% endif %}">
+            <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+                <div class="col"></div>
+                <div class="col">
+                    {{ pokey_buttons.North }}{{ card_display.North.player.name_dir }}: {{ card_display.North.cards }}
+                </div>
+                <div class="col"></div>
+            </div>
+            <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+                <div class="col">{{ pokey_buttons.West }}{{ card_display.West.player.name_dir }}: {{ card_display.West.cards }}</div>
+                <div class="col">{% include "three-by-three-trick-display-partial.html#three-by-three-trick-display" %}</div>
+                <div class="col">{{ pokey_buttons.East }}{{ card_display.East.player.name_dir }}: {{ card_display.East.cards }}</div>
+            </div>
+            <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+                <div class="col"></div>
+                <div class="col">
+                    {{ pokey_buttons.South }}{{ card_display.South.player.name_dir }}: {{ card_display.South.cards }}
+                </div>
+                <div class="col"></div>
+            </div>
+        </div>
+    </div>
     <div style="display: flex;">
         <div>
             <div style="font-family: monospace;" id="bidding-box">
@@ -85,7 +113,51 @@ auctionEventSource.addEventListener('message', function (e) {
 }, false);
 
     </script>
-    {% include "four-hands-3x3-partial.html#four-hands-3x3-scripts" %}
+    <script>
+var play_event_source = new ReconnectingEventSource('/events/table/{{ table.pk }}');
+
+play_event_source.addEventListener('message', function (e) {
+    var d = JSON.parse(e.data) ;
+    if ("contract" in d) {
+        console.log("Opening lead event listener saw " + e.data);
+
+        var openingLeader = d["contract"]["opening_leader"];
+
+        if (openingLeader == {{ user.player.seat.direction }}) {
+            // Ideally we'd just reload the one hand that changed, not all four; but oh well
+            htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'});
+        }
+    } else if ("card" in d) {
+        // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
+        htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'}).then(() => {
+            htmx.ajax('GET', '{{ hand_summary_endpoint }}', {target:'#hand-summary', swap:'innerHTML'})
+            console.log(
+                new Date().toISOString(),
+                ": Play event listener saw play #"
+                    + d.play_id
+                    + ", "
+                    + d.card
+                    + " from "
+                    + d.player
+                    + ", so it fetched {{ four_hands_partial_endpoint }} and {{ hand_summary_endpoint }}"
+            );
+        });
+
+    }
+}, false);
+
+htmx.on("htmx:afterSettle", function(evt) {
+    var handStatusDataset = document.querySelector("#four-hands").dataset;
+    if (handStatusDataset.handStatus) {
+        console.log("Way-ul, our DOM has settled, and the ol' clock on the wall says " +  handStatusDataset.handStatus + ", so maybe I'll forcibly reload this page");
+        auctionEventSource.close();
+        play_event_source.close();
+        window.location.reload();
+    }
+})
+
+
+    </script>
     <script>
 htmx.on("htmx:responseError", function(evt) {
    alert(evt.detail.xhr.response);
