--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -19,7 +19,7 @@
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
           data-viewer="{{ user.player }}">
         <div>
-            <a href="{% url "app:home" %}">Home</a> | <a href="{% url "app:lobby" %}">Lobby</a> | <a href="{% url "app:table" %}">Tables</a>
+            <a href="{% url "app:home" %}">Home</a> | <a href="{% url "app:lobby" %}">Lobby</a> | <a href="{% url "app:hand-list" %}">Hands</a>
             | <a href="{% url "app:players" %}">Players</a>
             | <a href="{{ VERSION|gitlab_link }}">version <tt>{{ VERSION }}</tt></a>
             {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
