--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
     <div>
-        <h1>Review of {{ table }}</h1>
+        <h1>Review of {{ hand }}</h1>
         <button class="btn btn-primary"
-                hx-post="{% url 'app:new-board-plz' table.pk %}"
+                hx-post="{% url 'app:new-board-plz' hand.pk %}"
                 hx-swap="none"
                 type="submit">NEW BOARD PLZ</button>
-        <h2>{{ table.current_hand.board }}</h2>
-        <h2>{{ table.current_auction_status }}</h2>
+        <h2>{{ hand.board }}</h2>
+        <h2>{{ hand.auction_status }}</h2>
         <h2>{{ score }}</h2>
         <p>{{ vars_score }}</p>
     </div>
@@ -16,7 +16,7 @@
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
     <div>
-        {% for t in table.current_hand.xscript.tricks %}
+        {% for t in hand.xscript.tricks %}
             <div class="row">
                 {% for p in t.plays %}
                     <div class="col">
