--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -3,17 +3,17 @@
     <div>
         <div style="display: flex">
             <div style="flex-grow: 1">
-                <h1>{{ table.current_hand.board }}</h1>
+                <h1>{{ hand.board }}</h1>
             </div>
             <div>
-                <h1>{{ table }}</h1>
+                <h1>{{ hand }}</h1>
             </div>
         </div>
         <h1>
-            <div id="auction-summary">Auction: {{ table.current_auction.status }}</div>
+            <div id="auction-summary">Auction: {{ hand.auction.status }}</div>
         </h1>
         <h1>
-            <div id="hand-summary">{{ table.current_hand.status }}</div>
+            <div id="hand-summary">{{ hand.status }}</div>
         </h1>
     </div>
     <div class="col">{% include "four-hands.html" %}</div>
@@ -26,15 +26,3 @@
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
 {% endblock content %}
-{% block scripts %}
-    <script>
-var tableEventSource = new ReconnectingEventSource('/events/table/{{ table.pk }}');
-
-tableEventSource.addEventListener('message', function (e) {
-    console.log("Table event listener saw " + e.data);
-
-    window.location.reload();
-}, false);
-
-    </script>
-{% endblock scripts %}
