Restore auction history to hand archive

--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -18,7 +18,7 @@
                 </tr>
             </th>
             <tbody>
-                {% for row in table.current_auction.fancy_HTML_display %}
+                {% for row in hand.auction.fancy_HTML_display %}
                     <tr>
                         {% for call in row %}
                             <td>
