--- a/project/app/templates/four-hands.html
+++ b/project/app/templates/four-hands.html
@@ -7,13 +7,11 @@
     {# North at the top as per the Bridge Writing Style Guide #}
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
-        <div class="col">
-            {{ pokey_buttons.North }}{{ card_display.North.player.name_dir }}: {{ card_display.North.cards }}
-        </div>
+        <div class="col">{{ card_display.North.player.name_dir }}: {{ card_display.North.cards }}</div>
         <div class="col"></div>
     </div>
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
-        <div class="col">{{ pokey_buttons.West }}{{ card_display.West.player.name_dir }}: {{ card_display.West.cards }}</div>
+        <div class="col">{{ card_display.West.player.name_dir }}: {{ card_display.West.cards }}</div>
         <div class="col">
             <div class="three-by-three-yadda-yadda">
                 {% for row in three_by_three_trick_display.rows %}
@@ -26,13 +24,11 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col">{{ pokey_buttons.East }}{{ card_display.East.player.name_dir }}: {{ card_display.East.cards }}</div>
+        <div class="col">{{ card_display.East.player.name_dir }}: {{ card_display.East.cards }}</div>
     </div>
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
-        <div class="col">
-            {{ pokey_buttons.South }}{{ card_display.South.player.name_dir }}: {{ card_display.South.cards }}
-        </div>
+        <div class="col">{{ card_display.South.player.name_dir }}: {{ card_display.South.cards }}</div>
         <div class="col"></div>
     </div>
 </div>
