--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -26,6 +26,22 @@
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
 {% endblock content %}
+{% block upper-right-column %}
+    {% if DEPLOYMENT_ENVIRONMENT != "production" %}
+        <div class="col">
+            <div class="form-check form-switch">
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       id="god-mode-switch"
+                       hx-post="{% url 'app:open-access-toggle' hand.pk %}"
+                       hx-swap="none"
+                       {% if hand.open_access %}checked{% endif %} />
+                <label class="form-check-label" for="god-mode-switch">✨GOD MODE🦄</label>
+            </div>
+        </div>
+    {% endif %}
+{% endblock upper-right-column %}
 {% block scripts %}
     <script>
 var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}');
