--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -2,10 +2,10 @@
 {% block content %}
     <div>
         <h1>Review of {{ hand }}</h1>
-        <button class="btn btn-primary"
-                hx-post="{% url 'app:new-board-plz' hand.table.pk %}"
-                hx-swap="none"
-                type="submit">NEW BOARD PLZ</button>
+        <form method="post" action="{% url 'app:new-board-plz' hand.table.pk %}">
+            {% csrf_token %}
+            <button class="btn btn-primary" type="submit">NEW BOARD PLZ</button>
+        </form>
         <h2>{{ hand.board }}</h2>
         <h2>{{ hand.auction_status }}</h2>
         <h2>{{ score }}</h2>
