--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     <div>
-        <div style="display: flex">
-            <div style="flex-grow: 1">
+        <div class="row">
+            <div class="col">
                 <h1>{{ hand.board }}</h1>
             </div>
-            <div>
+            <div class="col">
                 <h1>{{ hand }}</h1>
             </div>
         </div>
