--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -27,7 +27,7 @@
                         <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.player_names }}</a>
+                        <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.player_names }}</a>
                     </td>
                     <td>
                         <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.auction.status }}</a>
