--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -7,7 +7,7 @@
             <button class="btn btn-primary" type="submit">NEXT BOARD PLZ</button>
         </form>
         <h2>{{ hand.board }}</h2>
-        <h2>{{ hand.auction_status }}</h2>
+        <h2>{{ hand.auction.status }}</h2>
         <h2>{{ score }}</h2>
         <p>{{ vars_score }}</p>
     </div>
