--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -6,7 +6,7 @@
                 <h1>{{ hand.board }}</h1>
             </div>
             <div class="col">
-                <h1>{{ hand }}</h1>
+                <h1>Table {{ hand.table.pk }}, {{ hand }}</h1>
             </div>
         </div>
         <h1>
